changed id name of a single div

--- a/apps/travel/templates/travel/login.html
+++ b/apps/travel/templates/travel/login.html
@@ -4,7 +4,7 @@
 
 {% block login %}
 
-<h1 id='login'>Login and Registration</h1>
+<h1 id='header'>Login and Registration</h1>
 
 {% if messages %}
     {% for message in messages %}
